feat: Улучшен класс PortScanner
- Добавлен конструктор, который принимает ExecutorService, для более гибкого управления пулом потоков.
- Заменен статический метод scanPorts на метод экземпляра, что улучшает поддержку множественных сканеров.
- Добавлен синхронизированный список для хранения открытых портов, обеспечивает безопасность в многопоточной среде.
- Введен AtomicInteger для отслеживания прогресса сканирования и вывода прогресс-бара.
- Улучшен вывод прогресса и результата сканирования.

fix: Исправления и оптимизации

- Исправлены ошибки и устранены предупреждения компиляции.
- Введена проверка прокси на валидность при чтении из файла, что предотвращает ошибки формата и порта.

chore: Обновлен Main и добавлено описание

- Обновлен класс Main для использования улучшенного PortScanner.
- Добавлен пример использования в Main с комментариями.
- Добавлены описания к коду и коммитам для улучшения читаемости.